--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     line-height: 1.6;
     color: #333;
     padding: 20px;
+    text-align: center;
+    
 }
 
 header {
@@ -54,7 +56,8 @@ h2 {
 }
 
 img {
-    max-width: 50%;
+    align-items: center;
+    max-width: 10%;
     height: auto;
     margin: 10px 0;
     border: 1px solid #ddd;
@@ -75,12 +78,13 @@ label {
 }
 
 input {
-    width: 100%;
+    width: 30%;
     padding: 8px;
     margin-top: 5px;
     border: 1px solid #ddd;
     border-radius: 4px;
 }
+
 
 button {
     background: #4c7ade;
